--- a/src/main/resources/templates/modern/messages.html
+++ b/src/main/resources/templates/modern/messages.html
@@ -147,7 +147,7 @@
                 <li class="breadcrumb-item"><a href="/" class="text-decoration-none">
                     <i class="bi bi-house"></i> Home
                 </a></li>
-                <li class="breadcrumb-item"><a th:href="@{/modern/subscriptions}" class="text-decoration-none">
+                <li class="breadcrumb-item"><a th:href="@{subscriptions}" class="text-decoration-none">
                     Subscriptions
                 </a></li>
                 <li class="breadcrumb-item active" aria-current="page">Messages</li>
@@ -227,7 +227,7 @@
                         <i class="bi bi-arrow-clockwise" id="autoRefreshIcon"></i>
                         <span id="autoRefreshText">Auto-refresh: ON</span>
                     </button>
-                    <a th:href="@{/modern/messages(delete=true, id=${subscription.id})}" class="btn btn-danger btn-sm"
+                    <a th:href="@{messages(delete=true, id=${subscription.id})}" class="btn btn-danger btn-sm"
                        onclick="return confirm('Are you sure you want to clear all messages?');">
                         <i class="bi bi-trash"></i> Clear All
                     </a>
