--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -26,7 +26,7 @@
 <body>
 
 <div style="padding: 10px; background-color: #f5f5f5; border-bottom: 1px solid #ddd;">
-    <a href="/" class="btn btn-default btn-sm">
+    <a th:href="@{/}" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-home"></span> Back to Home
     </a>
     <a th:href="@{subscriptions}" class="btn btn-default btn-sm">
