--- a/src/main/resources/templates/modern/messages.html
+++ b/src/main/resources/templates/modern/messages.html
@@ -144,7 +144,7 @@
     <div class="header-section">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-3">
-                <li class="breadcrumb-item"><a href="/" class="text-decoration-none">
+                <li class="breadcrumb-item"><a th:href="@{/}" class="text-decoration-none">
                     <i class="bi bi-house"></i> Home
                 </a></li>
                 <li class="breadcrumb-item"><a th:href="@{subscriptions}" class="text-decoration-none">
