--- a/src/main/resources/templates/modern/subscriptions.html
+++ b/src/main/resources/templates/modern/subscriptions.html
@@ -163,7 +163,7 @@
             <h1 class="display-5 mb-0">
                 <i class="bi bi-bell"></i> Ukur Demo - Subscriptions
             </h1>
-            <a href="/" class="btn btn-outline-secondary btn-sm">
+            <a th:href="@{/}" class="btn btn-outline-secondary btn-sm">
                 <i class="bi bi-arrow-left"></i> Back to Home
             </a>
         </div>
