--- a/src/main/resources/templates/modern/subscriptions.html
+++ b/src/main/resources/templates/modern/subscriptions.html
@@ -163,8 +163,8 @@
             <h1 class="display-5 mb-0">
                 <i class="bi bi-bell"></i> Ukur Demo - Subscriptions
             </h1>
-            <a th:href="@{/}" class="btn btn-outline-secondary btn-sm">
-                <i class="bi bi-arrow-left"></i> Back to Home
+            <a th:href="@{../subscriptions}" class="btn btn-outline-primary btn-sm">
+                <i class="bi bi-arrow-left-right"></i> Switch to Classic
             </a>
         </div>
         <p class="lead mb-3">
